--- a/src/package.json
+++ b/src/package.json
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.30.0"
+    "eslint": "^8.30.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.31.11"
   }
 }
