--- a/src/package.json
+++ b/src/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "eslint": "^8.30.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "2.8.1"
   }
