--- a/src/staticwebapp.config.json
+++ b/src/staticwebapp.config.json
@@ -3,6 +3,14 @@
         {
             "route": "/.auth/login/twitter",
             "statusCode": 404
+        },
+        {
+            "route": "/login",
+            "rewrite": "/.auth/login/github"
+        },
+        {
+            "route": "/logout",
+            "rewrite": "/.auth/logout"
         }
     ]
 }
