--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "eslint": "^8.30.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.1"
   }
