--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "test": "echo \"No tests yet...\"",
+    "lint-fix": "eslint --fix ./**/*.js && prettier --write ./**/*.js"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
