--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\"",
-    "lint-fix": "eslint --fix ./**/*.js && prettier --write ./**/*.js"
+    "lint-fix": "eslint --fix --ext .js . && prettier --write './**/*.js'"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
