--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "eslint": "^8.30.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "prettier": "^2.8.1"
   }
 }
