--- a/src/package.json
+++ b/src/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-fix": "eslint --fix --ext .js src && prettier --write 'src/**/*.js'"
   },
   "eslintConfig": {
     "extends": [
